# Zephyr

./: Cargo.toml  README.md
src/: main.rs
src/aws/: bedrock.rs  client.rs  mod.rs
src/custom/: mod.rs  motorcycle.rs
src/gemini/: client.rs
src/meshy/: client.rs
src/util/: image_mask.rs  mod.rs
test/: api.rs
