[package]
name = "zephyr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
aws-config = "1.1.0"
aws-sdk-bedrockruntime = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
anyhow = "1.0"
image = "0.24"
imageproc = "0.23"